完成#3的需求
1.增加了selectedValue、selectedValues、selectedItem和selectedItems
2.修改列表高度为根据数据计算高度，最大高度为10个数据项即180px
3.修改itemlistWrap的背景色为#fff

--- a/themes/default/smart.ui.combobox.css
+++ b/themes/default/smart.ui.combobox.css
@@ -37,8 +37,8 @@
 	
 	
 	.combobox-itemlist-wrap{
-		height: 180px;
 		border: 1px solid #ccc;
+		background-color: #FFFFFF;
 		position: absolute;
 		left:8px;
 		top:31px;
