--- a/themes/default/smart.ui.combobox.css
+++ b/themes/default/smart.ui.combobox.css
@@ -13,6 +13,16 @@
 		width: 100%;
 	}
 	
+	/*禁用时的样式*/
+	.smart-ui-combobox-disabled{
+		background-image: none;
+		opacity: 0.35;
+	}
+	
+	.ui-state-disabled {
+		cursor: default !important;
+	}
+	
 	.combobox-text{
 		line-height: 18px;
 		padding: 2px 6px 1px;
